--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -1,5 +1,9 @@
-.intro{
-    &__wrapper{
-        background-color: rgb(103,58,183);
+.intro {
+    height: 800px;
+    background: rgb(0, 70, 135);
+    background: linear-gradient(0deg, rgba(0, 70, 135, 1) 0%, rgba(96, 130, 182, 1) 50%, rgba(212, 219, 231, 1) 100%);
+
+    &__wrapper {
+        display: flex;
     }
 }
