--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -1,19 +1,52 @@
-.intro {
+.page {
     height: 800px;
     background: rgb(0, 70, 135);
     background: linear-gradient(0deg, rgba(0, 70, 135, 1) 0%, rgba(96, 130, 182, 1) 50%, rgba(212, 219, 231, 1) 100%);
+}
+
+.header {
+    background-color: rgba(0, 0, 0, 0.055);
+    color: rgb(8,75,139);
+    height: 40px;
+}
+
+.menu__list {
+    margin-left: 50px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    color: #fff;
+}
+.menu__item{
+    margin-right: 20px;
+}
+
+
+.intro {
     &__wrapper {
         display: flex;
+        color: #fff;
+        padding-top: 100px;
     }
+
     .info {
-        padding-top: 60px;
     }
+
     .info__name {
-        font-size: 40px;
-        font-weight: 700;
+        font-size: 50px;
+        font-weight: 400;
+        margin-bottom: 20px;
     }
+
     .info__descr {
+        font-size: 20px;
+        width: 550px;
+        line-height: 30px;
     }
+
     .intro__img {
+        width: 800px;
+        
     }
 }
